--- a/public/index.html
+++ b/public/index.html
@@ -2,42 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <link rel="manifest" href="./manifest.json" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>Phys GPT</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script>
+      window.onload = () => {
+        const backgrounds = [
+          "./bg/binary_stars_bg.jpg",
+          "./bg/bit_orb_bg.jpg",
+          "./bg/chalkboard_bg.jpg",
+          "./bg/magnetic_spin_bg.jpg",
+          "./bg/nucleus_bg.jpg",
+          "./bg/orbitals_bg.jpg",
+          "./bg/particle_collision_bg.jpg",
+          "./bg/portal_bg.jpg",
+          "./bg/quantum_bg.jpg",
+          "./bg/quantum_mechanics_bg.webp",
+          "./bg/quantum_physics_2_bg.jpg",
+          "./bg/quantum_physics_bg.jpg",
+          "./bg/quantum_theory_web_bg.jpg",
+          "./bg/twisting_matrix_bg.jpg",
+          "./bg/vector_bg.jpg"
+        ]
+        index = Math.floor(Math.random() * backgrounds.length);
+        document.getElementsByTagName('body')[0].style.backgroundImage=`url(${backgrounds[index]})`
+      }
+    </script>
   </body>
 </html>
