update readme and some minor updates

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
           "./bg/portal_bg.jpg",
           "./bg/quantum_bg.jpg",
           "./bg/quantum_mechanics_bg.webp",
+          "./bg/AI_deep_space.webp",
           "./bg/quantum_physics_2_bg.jpg",
           "./bg/quantum_physics_bg.jpg",
           "./bg/quantum_theory_web_bg.jpg",
