fix bugs and swap a background

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
           "./bg/pillars_of_creation_bg.jpg",
           "./bg/plasma_fusion_reactor_bg.jpg",
           "./bg/quantum_bg.jpg",
-          "./bg/superconductor_bg.jpg",
+          "./bg/superconductors_bg.png",
           "./bg/silicon_wafer_bg.jpg",
           "./bg/quantum_mechanics_bg.jpg",
           "./bg/quantum_physics_bg.jpg",
