--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Play:wght@700&family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
 
     <title>Phys GPT</title>
   </head>
@@ -36,7 +36,7 @@
           "./bg/quantum_bg.jpg",
           "./bg/superconductors_bg.jpeg",
           "./bg/silicon_wafer_bg.jpg",
-          "./bg/quantum_mechanics_bg.jpg",
+          "./bg/string_theory_bg.jpg",
           "./bg/quantum_physics_bg.jpg",
           "./bg/quantum_theory_web_bg.jpg",
           "./bg/science_bg.jpg",
